# pipeline_nextflow

./: README.md  pyproject.toml
Data/: task1.txt  task2.txt
docker/: Dockerfile-cu124  Dockerfile-cu124-reader  Dockerfile-cu124-writer
pipeline/: main.nf  nextflow.config
scripts/: reader.py  writer.py
shared_folder/vlmevalkit/: .gitignore  requirements.txt  run.py
