[tool.poetry]
name = "vlmevalkit"
version = "0.1.0"
description = ""
authors = ["Anton Shiryaev <med.phisiker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=2.0.1"
transformers = "4.33.0"
torchvision = ">=0.16"
decord = "^0.6.0"
huggingface-hub = "^0.26.2"
imageio = "^2.36.0"
matplotlib = "^3.9.2"
numpy = ">=1.23.4"
omegaconf = "^2.3.0"
openai = "1.3.5"
opencv-python = ">=4.4.0.46"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
peft = "^0.13.2"
pillow = "^11.0.0"
portalocker = "^3.0.0"
protobuf = "^5.28.3"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
rich = "^13.9.4"
sentencepiece = "^0.2.0"
setuptools = "^75.6.0"
sty = "^1.0.6"
tabulate = "^0.9.0"
tiktoken = "^0.8.0"
timeout-decorator = "^0.5.0"
tqdm = "^4.67.0"
typing-extensions = "4.7.1"
validators = "^0.34.0"
xlsxwriter = "^3.2.0"

[[tool.poetry.source]]
name = "torch_сu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
